--- a/display-exercise.html
+++ b/display-exercise.html
@@ -15,8 +15,12 @@
   <!-- your styles will go in display-page.css -->
   <link rel="stylesheet" type="text/css" href="styles/display-page.css">
 </head>
-<body>
+<body class="container">
 <!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+	<div class="top-box green-box"></div>
+  <div class="top-box blue-box"></div>
+  <div class="bottom-box gray-box"></div>
+  <div class="bottom-box black-box"></div>
+  <div class="bottom-box orange-box"></div>
 </body>
 </html>
