Increase readibility: top-box is now top-row, bottom-box is now bottom-row

--- a/display-exercise.html
+++ b/display-exercise.html
@@ -17,10 +17,10 @@
 </head>
 <body class="container">
 <!-- your HTML here to implement the colored box design -->
-	<div class="top-box green-box"></div>
-  <div class="top-box blue-box"></div>
-  <div class="bottom-box gray-box"></div>
-  <div class="bottom-box black-box"></div>
-  <div class="bottom-box orange-box"></div>
+	<div class="top-row green-box"></div>
+  <div class="top-row blue-box"></div>
+  <div class="bottom-row gray-box"></div>
+  <div class="bottom-row black-box"></div>
+  <div class="bottom-row orange-box"></div>
 </body>
 </html>
