--- a/position-exercise.html
+++ b/position-exercise.html
@@ -29,6 +29,11 @@
 
   <main>
     <!-- Put the HTML you need to accomplish the design -->
+    <div class="border-box">
+      <img src="images/spacecat.png" class="cat"></img>
+      <img src="images/spacedog.png" class="dog"></img>
+    </div>
+
   </main>
 </body>
 </html>
